sumo/tests/traci/Scenario/DomainTL/InvalidObjectId/scenario_tl_invalidobjectid.prog
simstep 1 1
% flag: get, domain: traffic light, domain id:-1, variable: name, valueType: 0 %
scenario_novalue 0 2 -1 13 0
simstep 2 1
